//file:noinspection DependencyNotationArgument
import java.time.format.DateTimeFormatter

buildscript {
    ext.kotlin_version = '1.6.0'
    ext {
        kotlin_version = kotlinVersion
//        kotlinVersion = "1.5.31"

        sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
    }
    repositories {
        mavenLocal()
        mavenCentral()
        google()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url 'https://jitpack.io' }
    }

    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
    }
}
plugins {
    id 'org.jetbrains.kotlin.jvm' version "$kotlinVersion"
    id "org.jetbrains.kotlin.kapt" version "$kotlinVersion"
    id 'com.github.Zelaux.MindustryModCore' version "$modCoreVersion"
    id "io.freefair.lombok" version "8.10"
}/*
project(":annotations"){
    apply plugin: "java-library"
}*/
mindustryModCore {

    jarMindustryTask()
    addKaptAnnotations(project(":core"), project(":core:original"))
    setupSpriteGenerationTask("bytelogic.tools.ByteLogicImagePacker", project(":tools"))
//    setupAnnotationProject(project(":annotations"))
    addArcLibrary()
    addMindustryModCore()
    projectInfo {
        rootDirectory = rootDir
        assetsPath = "core/assets"
        assetsRawPath = "core/assets-raw"
        rootPackage = "bytelogic"
        modInfoPath = "mod.json"
        revisionsPath = "annotations/src/main/resources/revisions"
        classPrefix = "BL"
    }
}
ext {
    //the build number that this mod is made for
    //version of SDK you will be using
    sdkVersion = '30'
    sdkRoot = System.getenv("ANDROID_HOME")
    doExec = { cmd ->
        println Arrays.toString(buildDir.list())
        def proc = cmd.execute(null, new File(buildDir as File,"libs"))
        proc.waitForProcessOutput(System.out, System.err)
    }
}

version '1.0'
allprojects {
    apply plugin: 'groovy'
    apply plugin: "kotlin"

//    version = 'release'
    group = 'com.github.Zelaux'
    apply plugin: 'maven-publish'
    repositories {
        mavenLocal()
        google()
        mavenCentral()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
        maven { url 'https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository' }
        maven { url 'https://raw.githubusercontent.com/Zelaux/Repo/master/repository' }
    }
    compileKotlin {
        sourceCompatibility = JavaVersion.VERSION_16
        targetCompatibility = JavaVersion.VERSION_1_8
    }
    tasks.withType(JavaCompile) {
        targetCompatibility = 8
        sourceCompatibility = JavaVersion.VERSION_16
        options.encoding = "UTF-8"
//        options.encoding = "windows-1251"
        options.compilerArgs += ["-Xlint:deprecation"]

        options.forkOptions.jvmArgs.addAll([
                '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
        ])
    }
}


/*configure(project(":annotations")){
    tasks.withType(JavaCompile){
        targetCompatibility = 8
        sourceCompatibility = 8
        options.fork = true
    }
}*/

//compile with java 8 compatibility for everything except the annotation project
configure(subprojects - project(":annotations")) {
    tasks.withType(JavaCompile) {
        options.compilerArgs.addAll(['--release', '8'])
    }

    tasks.withType(Javadoc) {
        options {
            addStringOption('Xdoclint:none', '-quiet')
            addStringOption('-release', '16')
        }
    }
}

//project(":core")
[":core:original", ":core"].collect {
    project(it) {


        apply plugin: "java-library"
        apply plugin: "io.freefair.lombok"
        compileJava.options.fork = true
        kapt {
            keepJavacAnnotationProcessors = true
        }

        task preGen {
            outputs.upToDateWhen { false }
        }
        task sourcesJar(type: Jar, dependsOn: classes) {
            duplicatesStrategy = DuplicatesStrategy.EXCLUDE
            archiveClassifier = 'sources'
            from sourceSets.main.allSource
        }

        task assetsJar(type: Jar, dependsOn: ":tools:pack") {
            duplicatesStrategy = DuplicatesStrategy.EXCLUDE
            archiveClassifier = 'assets'
            from files("assets") {
                exclude "config", "cache", "music", "sounds"
            }
        }
        artifacts {
            archives sourcesJar
            archives assetsJar
        }

        repositories {
            mavenCentral()
        }
        dependencies {
            compileJava.dependsOn(preGen)

            implementation arcLibModule("ui:defaults")
            implementation arcLibModule("ui:utils")
            implementation arcLibModule("ui:tooltips")
            implementation arcLibModule("ui:components")
            implementation arcLibModule("ui:listeners")
            implementation arcLibModule("utils:io")
            implementation arcLibModule("utils:refs")
            implementation arcLibModule("utils:events")
            implementation arcLibModule("settings")
            implementation arcLibModule("graphics:drawText")

            implementation coreModule("tiledStructures")
            implementation coreModule("core")
//            implementation coreModule("utils")
            implementation coreModule("utils-strings")
            implementation coreModule("utils-techTree")
            implementation coreModule("ui-dialogs")
            implementation coreModule("graphics-drawText")

            compileOnly "org.lz4:lz4-java:1.7.1"
            compileOnly arcModule("arc-core")
            compileOnly arcModule("extensions:flabel")
            compileOnly arcModule("extensions:freetype")
            compileOnly arcModule("extensions:g3d")
            compileOnly arcModule("extensions:fx")
            compileOnly arcModule("extensions:arcnet")
            compileOnly mindustryModule("core")
//        implementation "com.github.Zelaux:AdvancedContentInfo:$aciVersion"

            annotationProcessor 'com.github.Anuken:jabel:0.9.0'

            compileOnly coreModule("annotations")
            compileOnly project(":annotations")

//            println "it is ${project.displayName}"
            if (project.name == "core") {
                kapt(
                        coreModule("annotations"), project(":annotations"))
//                kapt project(":annotations")
            }
            implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
//        annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
            compileOnly 'org.projectlombok:lombok:1.18.32'
            annotationProcessor 'org.projectlombok:lombok:1.18.32'

        }

        afterEvaluate {
            task mergedJavadoc(type: Javadoc) {
                if (true) return null;
                def blacklist = [project(":annotations")]
                if (findProject(":android") != null) {
                    blacklist += project(":android")
                }

                source rootProject.subprojects.collect { project ->
                    if (!blacklist.contains(project) && project.hasProperty("sourceSets")) {
                        return project.sourceSets.main.allJava
                    }
                }

                classpath = files(rootProject.subprojects.collect { project ->
                    if (!blacklist.contains(project) && project.hasProperty("sourceSets")) {
                        return project.sourceSets.main.compileClasspath
                    }
                })
                destinationDir = new File(buildDir, 'javadoc')
            }
        }
        jar {
            duplicatesStrategy = DuplicatesStrategy.EXCLUDE
            exclude("bytelogic/entities/comp/**")
            exclude("bytelogic/entities/compByAnuke/**")
        }
    }
}
project(":tools") {
    apply plugin: "java"

    dependencies {
        implementation fileTree(dir: 'libs', include: ['*.jar'])
        implementation 'commons-io:commons-io:2.5'
        implementation("org.apache.xmlgraphics:batik-svgrasterizer:1.9")


        implementation project(":core")

        implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.22.1'
        implementation mindustryModule("core")

        implementation arcModule("natives:natives-desktop")
        implementation arcModule("natives:natives-freetype-desktop")
        implementation arcModule("backends:backend-headless")
        implementation arcModule("backends:backend-sdl")


        implementation coreModule("core")

//        implementation 'com.github.sterlp:svg2png:1.0.0'
        implementation coreModule("tools")

        implementation arcModule(":extensions:packer")
    }

}
configure([project(":core")]) {
    java {
        withJavadocJar()
        withSourcesJar()
    }

    publishing {
        publications {
            maven(MavenPublication) {
                from components.java
            }
        }
    }
}

task jarAndroid {
    dependsOn "jar"

    doLast {
        //collect dependencies needed for desugaring
        def files = (
                project(":core").configurations.compileClasspath.asList() +
                        project(":core").configurations.runtimeClasspath.asList() +
                        configurations.runtimeClasspath.asList() +
                        [new File("$sdkRoot/platforms/android-$sdkVersion/android.jar")]
        )
        def dependencies = files.collect { "--classpath $it.path" }.join(" ")
        def sdkRoot = file(
                System.getenv('ANDROID_SDK_ROOT') ?: System.getenv('ANDROID_HOME') ?:
                        { throw new GradleException('Neither `ANDROID_SDK_ROOT` nor `ANDROID_HOME` is set') }
        )

        // Find `d8`.
        def d8 = file("$sdkRoot/build-tools/34/d8")
        //dex and desugar files - this requires d8 in your PATH
        doExec("$d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar")
    }
}
jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    dependsOn "core:jar"
    archiveFileName = "${project.archivesBaseName}Desktop.jar"
    //  if (!file(rootDir+"/core/assets/sprites").exists())dependsOn "tools:pack"
    from {
//        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
        project(":core").fileTree("build/libs/core.jar").collect { it.isDirectory() ? it : zipTree(it) }
    }
    from {
        project(":core").configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
//        project(":core").fileTree("build/libs/core.jar").collect { it.isDirectory() ? it : zipTree(it) }
    }

    from(rootDir) {
        include "mod.hjson"
        include "mod.json"
        include "icon.png"
    }

    from("core/assets/") {
        include "**"
    }
}
task deploy(type: Jar) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    dependsOn jarAndroid
    dependsOn jar
    archiveFileName = "${project.archivesBaseName}.jar"

    from { [zipTree("$buildDir/libs/${project.archivesBaseName}Desktop.jar"), zipTree("$buildDir/libs/${project.archivesBaseName}Android.jar")] }

    doLast {
        delete { delete "$buildDir/libs/${project.archivesBaseName}Desktop.jar" }
        delete { delete "$buildDir/libs/${project.archivesBaseName}Android.jar" }
    }
}
task resolveDependencies {
    doLast {
        rootProject.allprojects { project ->
            Set<Configuration> configurations = project.buildscript.configurations + project.configurations
            configurations.findAll { c -> c.canBeResolved }.forEach { c -> c.resolve() }
        }
    }
}
publishToMavenLocal {
    dependsOn("tools:pack")
    dependsOn("jar")
}
repositories {
    mavenCentral()
}
compileKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
